<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:key="gemini_api_key"
        android:title="@string/settings_api_key_title"
        android:summary="@string/settings_api_key_summary"
        android:inputType="textPassword" />

    <SwitchPreference
        android:key="debug_mode"
        android:title="@string/settings_debug_mode_title"
        android:summary="@string/settings_debug_mode_summary"
        android:defaultValue="false" />

    <ListPreference
        android:key="language"
        android:title="@string/settings_language_title"
        android:summary="@string/settings_language_summary"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:defaultValue="english" />

</PreferenceScreen>
